stylesheet.css
/* ... */
#gameListItem{
	width: 30%;
	display: inline-block;
	height: auto;
}
#gameListItemImg{
	width: 30%;
}
#closeButtonSmall{
	width: 30px;
	border-radius: 50%;
	border:none;
	text-align: center;
	top: 2.5%;
	right: 2.5%;
	position: relative;
	background-color: transparent;
	color: white;
}
#gameListItemFullWidth{
	width: 100%;
}
#counter1{
}
/*Staff List*/
#staffList{
	background-color: rgba(0,0,0,0.5);
	width: 40%;
	padding: 15px;
	border-radius: 15px;
	margin-left: auto;
	margin-right: auto;
	text-align: justify;
}
#staffListItem{
	text-align: justify;
	margin-bottom: 20px;
	width: auto;
	margin-right: 0px;
	min-width: 50px;
	line-height: 1.5;
	margin-left: auto;
	margin-right: auto;
	margin-left: auto;
		margin-right: auto;
		width: 75%;
		text-align: center;
}
/*Form*/
#loginForm{
	width: 50%;
	margin-left: auto;
	margin-right: auto;
}
#username{
	border: 2px solid blue;
	border-radius: 12px;
	width: 200px;
	position: block;
	height: 25px;
	padding-left: 15px;
	padding-right: 15px;
	padding-top: 5px;
	padding-bottom: 5px;
	transition: 0.5s;
}
#username:hover{
	border: 4px solid gold;
	zoom:1.25;
		margin-left: auto;
	margin-right: auto;
}
#password{
	border: 2px solid blue;
	border-radius: 12px;
	width: 200px;
	height: 25px;
	padding-left: 15px;
	position: block;
	padding-right: 15px;
	padding-top: 5px;
	padding-bottom: 5px;
	transition: 0.5s;
}
#password:hover{
	border: 4px solid gold;
	zoom:1.25;

	margin-left: auto;
	margin-right: auto;
}
#resetPassForm{
	display: none;
	border: 5px solid gold;
	border-radius: 5%;
	width: 40vw;
	padding:2.5vw;
	background-color: rgba(0,0,0,0.5);
	transition: 1s;
	margin-bottom: 40px;
}
/*Game Icon*/
#iconContainer{
	width: 80vw;
	margin-left: auto;
	margin-right: auto;
	height: auto;
	text-align: center;
}
.UCGameIconA{
	width: 25%;
	height: 250px;
	text-align: center;
	text-decoration: none;
	margin-right: auto;
	display: inline-block;
}
.UCGameIconImg{
	text-align: center;
	width: 50%;
	height: 50%;
}
#UCGameIconContainer{
	margin-left: auto;
	margin-right: auto;
	text-align: center;
width: 80%;
height: auto;
background-color: grey;
border-radius: 12px;
}
#UCGameIconContainer:hover{
background-color: gold;
}
#UCGameIconContainer p{
	text-align: center;
		font-size: 20px;
}
/*Resources*/

.resourceButton{
		background-color: rgba(0,0,0,0.5);
  border: 5px solid gold;
  color: white;
  padding: 20px;
  text-align: center;
  border-radius: 15px;
  transition: 0.5s;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  display: block;
  width: auto;
  margin-right: auto;
  margin-left: auto;
}
.resourceButton:hover{
	background-color: rgba(255,215,0,0.5)
}
#resourceRow{
	display: block;
	width: 90vw;
	margin-left: auto;
	margin-right: auto;

}
#resourceColoumn{
	display: inline-block;
	width: 30%;
	margin-left: auto;
	margin-right: auto;
}
/*Other*/
#contactList{

}
#contactListItemNumbered{
	margin-bottom: 15px;
	line-height: 1.5;
}
/*Mobile*/
#gWidget1{
	display: inline;
}
#gWidget2{
	display: none;
}
@media screen and (max-width: 660px){
	#nav{
		height: auto;
	}
	#navLink{
		width: 100%;
		height: 40px;
		font-size: 15px;
				padding-top: 5px;
		padding-bottom: 5px;
	}
	#navLinkActive{
		width: 100%;
		height: 40px;
		padding-top: 5px;
		padding-bottom: 5px;
				font-size: 15px;
	}
	#navItem{
		height: 25px;
		margin-top: auto;
		margin-bottom: auto;
		position: relative;
		top:35%;
	}
	#navItemActive{
		height: 25px;
		margin-top: auto;
		margin-bottom: auto;
		position: relative;
		top: 35%;
	}
	#homePageBody{
		padding-bottom: 175px;
	}
	#staffList{
		width: 100%;
			margin-left: none;
			border-radius: 0px;
			padding-left: 0px;
			padding-right: 0px;
	margin-right: none;
	}
	.UCGameIconA{
		width: 100%;
	}
	#page{
		padding-top: 75px;
	}
	#username{
		left: 0;
	}
	#username:hover{
	zoom: 1;
	}
	#password:hover{
	zoom: 1;
	}
	#gWidget1{
	display: none;
}
#gWidget2{
	display: inline;
}

.resourceButton{
margin:none;
width: 100%;
}

#resourceRow{
	display: block;
	width: 100%;
}
#resourceColoumn{
	display: inline-block;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
}
}

